# lexybot

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
lexybot/: __init__.py  add.py  run.py
modal/: lexy.py
