[tool.poetry]
name = "lexybot"
version = "0.1.0"
description = ""
authors = ["Shivanshi Tyagi <shivanshityagi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
py-cord = "^2.4.1"
httpx = "^0.24.1"
pydantic = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
