[tool.poetry]
name = "lexybot"
version = "0.1.0"
description = ""
authors = ["Shivanshi Tyagi <shivanshityagi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
py-cord = "^2.4.1"
httpx = "^0.24.1"
llama-index = "^0.7.11.post1"
pymilvus = "^2.2.14"
docx2txt = "^0.8"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
